--- a/requirements.txt
+++ b/requirements.txt
@@ -1,160 +1,27 @@
-absl-py==1.0.0
-aenum==2.2.6
-argon2-cffi==21.1.0
-astunparse==1.6.3
-attrs==21.2.0
-autobahn==21.11.1
-Automat==20.2.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==4.1.0
-branca==0.4.2
-cachetools==5.0.0
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.9
-click==8.0.3
-click-plugins==1.1.1
-cligj==0.7.2
-colorama==0.4.4
-colorgram.py==1.2.0
-constantly==15.1.0
-cryptography==36.0.1
-cv==1.0.0
-cycler==0.11.0
-debugpy==1.5.1
-decorator==5.1.0
-defusedxml==0.7.1
-entrypoints==0.3
-et-xmlfile==1.1.0
-fbchat==1.9.7
-flatbuffers==2.0
-folium==0.12.1.post1
-fonttools==4.28.2
-gast==0.5.3
-geopandas==0.10.2
-google-auth==2.6.6
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.46.0
+Django==3.2.5
+
+asgiref==3.3.2
+attrs==20.3.0
+certifi==2020.12.5
+chardet==4.0.0
+dj-database-url==0.5.0
+django-environ==0.4.5
+django-heroku==0.3.1
 gunicorn==20.1.0
-h5py==3.6.0
-hkdf==0.0.3
-humanize==3.13.1
-hyperlink==21.0.0
-idna==3.3
-importlib-metadata==4.11.3
-importlib-resources==5.4.0
-incremental==21.3.0
-ipykernel==6.5.1
-ipython==7.29.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-jedi==0.18.1
-Jinja2==3.0.3
-joblib==1.1.0
-jsonschema==4.2.1
-jupyter==1.0.0
-jupyter-client==7.1.0
-jupyter-console==6.4.0
-jupyter-core==4.9.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
-keras==2.8.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.2
-lab==7.0
-libclang==14.0.1
-magic-wormhole==0.12.0
-Markdown==3.3.7
-MarkupSafe==2.0.1
-matplotlib==3.5.0
-matplotlib-inline==0.1.3
-mistune==0.8.4
-munch==2.5.0
-mysql-connector-python==8.0.28
-nbclient==0.5.9
-nbconvert==6.3.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.6
-numpy==1.21.4
-oauthlib==3.2.0
-opencv-python==4.5.5.64
-openpyxl==3.0.9
-opt-einsum==3.3.0
-packaging==21.3
-paho-mqtt==1.6.1
-pandas==1.3.4
-pandocfilters==1.5.0
-parso==0.8.2
-pickleshare==0.7.5
-Pillow==8.4.0
-prometheus-client==0.12.0
-prompt-toolkit==3.0.22
-protobuf==3.20.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pygame==2.1.2
-Pygments==2.10.0
-PyNaCl==1.4.0
-pyOpenSSL==21.0.0
-pyparsing==3.0.6
-pyperclip==1.8.2
-pyproj==3.3.0
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-pytz==2021.3
-pywaffle==0.6.3
-PyYAML==6.0
-pyzmq==22.3.0
-qtconsole==5.2.1
-QtPy==1.11.2
-requests==2.26.0
-requests-oauthlib==1.3.1
-rsa==4.8
-scikit-learn==1.0.2
-scipy==1.7.3
-seaborn==0.11.2
-Send2Trash==1.8.0
-service-identity==21.1.0
-setuptools-scm==6.3.2
-Shapely==1.8.0
-simplejson==3.17.6
-six==1.16.0
-sklearn==0.0
-soupsieve==2.3.2.post1
-spake2==0.8
-squarify==0.4.3
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0
-tensorflow-io-gcs-filesystem==0.25.0
-termcolor==1.1.0
-terminado==0.12.1
-testpath==0.5.0
-tf-estimator-nightly==2.8.0.dev2021122109
-threadpoolctl==3.1.0
-tomli==1.2.2
-tornado==6.1
-tqdm==4.62.3
-traitlets==5.1.1
-turtle==0.0.1
-Twisted==21.7.0
-twisted-iocpsupport==1.0.2
-txaio==21.2.1
-txt2tags==3.7
-txtorcon==21.1.0
-typing_extensions==4.0.1
-urllib3==1.26.7
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.1.2
-widgetsnbextension==3.5.2
-wordcloud==1.8.1
-wrapt==1.14.1
-xlrd==2.0.1
-zipp==3.6.0
-zope.interface==5.4.0
+heroku==0.1.4
+idna==2.10
+iniconfig==1.1.1
+Pillow==8.3.2
+pluggy==0.13.1
+psycopg2==2.9.1
+py==1.10.0
+pytest==6.2.1
+python-dateutil==1.5
+python-decouple==3.4
+python-dotenv==0.15.0
+pytz==2021.1
+requests==2.25.1
+sqlparse==0.4.2
+toml==0.10.2
+urllib3==1.26.5
+whitenoise==5.2.0
