--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,10 @@ chardet==4.0.0
 dj-database-url==0.5.0
 django-environ==0.4.5
 django-heroku==0.3.1
+django-ckeditor==6.4.2
+django-mathfilters==1.0.0
+djangorestframework==3.13.1
+feedparser==6.0.10
 gunicorn==20.1.0
 heroku==0.1.4
 idna==2.10
@@ -25,3 +29,4 @@ sqlparse==0.4.2
 toml==0.10.2
 urllib3==1.26.5
 whitenoise==5.2.0
+
